; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_do_open_document_dialog.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-main.c_do_open_document_dialog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@filename = common dso_local global i64* null, align 8
@ui = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@doc = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @do_open_document_dialog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_open_document_dialog() #0 {
  %1 = load i64*, i64** @filename, align 8
  %2 = call i64 @ui_open_file(i64* %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %22

4:                                                ; preds = %0
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ui, i32 0, i32 0), align 8
  %5 = load i64*, i64** @filename, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %4
  %10 = call i32 (...) @glutLeaveMainLoop()
  br label %13

11:                                               ; preds = %4
  %12 = call i32 (...) @load_document()
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i64, i64* @doc, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %13
  %17 = call i32 (...) @load_page()
  %18 = call i32 (...) @render_page()
  %19 = call i32 (...) @shrinkwrap()
  %20 = call i32 (...) @update_title()
  br label %21

21:                                               ; preds = %16, %13
  br label %22

22:                                               ; preds = %21, %0
  ret void
}

declare dso_local i64 @ui_open_file(i64*) #1

declare dso_local i32 @glutLeaveMainLoop(...) #1

declare dso_local i32 @load_document(...) #1

declare dso_local i32 @load_page(...) #1

declare dso_local i32 @render_page(...) #1

declare dso_local i32 @shrinkwrap(...) #1

declare dso_local i32 @update_title(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
